# vawt_env

./: .gitignore  frames.gv
bags/: 2020-12-12-11-30-53.bag
cheats/: ROS C++ node  ROS Pycharm  ROS dynamic reconfigure  ROS launch  ROS libtinyxml2  ROS python node  ROS rqt python plugin  ROS rviz vizualize  ROS service  ROS urdf model rviz  ROS urdf robot model  anaconda  compare two environments  killros.bash  ros  ros package  ros serial  ros_serial_arduino  xfoil
learn/AeroDyn polars/: cp-100-0-50-gn_cp10_Re0.050_360_M
learn/QBlade Projects/: a
learn/RL/: eps_greedy_q_learning_old.csv  q_df.csv  rl1_qtables.py  rl1_qtables_1.py  rl1_qtables_2.py  rl2_regresion.py  rl3_run_game.py  rl_1.py
learn/airfoil_dynamics/: ct_cp10_naca0018_cmp.py  test.py
learn/airfoil_model/: 4_learn.py  7_compare_activation_func.py  7_compare_dense.py  8_visualize_activ_func_comp.py  8_visualize_dense_comp.py  8_visualize_spatial.py  cmp_act_learn_loss.csv  compare_dense_learn_loss.csv  data_load.py  (+1 more)
vawt_ws/src/ros_control_boilerplate/vawt_control/: CMakeLists.txt  package.xml
vawt_ws/src/ros_control_boilerplate/vawt_control/config/: vawt_robot_controllers.yaml
vawt_ws/src/ros_control_boilerplate/vawt_control/include/vawt_robot_control/: vawt_robot_hw_interface.h
vawt_ws/src/ros_control_boilerplate/vawt_control/launch/: vawt_robot.rviz  vawt_robot_hardware.launch  vawt_robot_simulation.launch  vawt_robot_test_trajectory.launch  vawt_robot_visualize.launch
vawt_ws/src/ros_control_boilerplate/vawt_control/src/: vawt_robot_hw_interface.cpp  vawt_robot_hw_main.cpp
(+180 files in other folders)
